# Civicomfy

./: README.md  __init__.py  config.py  pyproject.toml
api/: civitai.py  huggingface.py
downloader/: chunk_downloader.py  manager.py
server/: __init__.py  maintenance_state.py  utils.py
server/routes/: CancelDownload.py  ClearHistory.py  DeleteModel.py  DeleteOutputImage.py  DownloadModel.py  DownloadModelHF.py  GetBaseModels.py  GetLocalModels.py  GetModelDetails.py  GetModelDirs.py  GetModelTypes.py  GetOutputImages.py  GetStatus.py  MaintenanceProgress.py  OpenPath.py  RefreshModelInfo.py  RetryDownload.py  SearchModels.py  UpdateThumbnail.py  __init__.py
utils/: helpers.py
web/js/: civitaiDownloader.css  civitaiDownloader.js
web/js/api/: civitai.js
web/js/ui/: UI.js  feedback.js  previewRenderer.js  searchRenderer.js  statusRenderer.js  templates.js
web/js/ui/handlers/: browseHandler.js  downloadHandler.js  eventListeners.js  galleryHandler.js  myModelsHandler.js  searchHandler.js  settingsHandler.js  statusHandler.js
web/js/utils/: cookies.js  dom.js
